--- a/3D/cg.html
+++ b/3D/cg.html
@@ -29,9 +29,9 @@
     <div class="navbar-collapse collapse" id="collapsingNavbarXs">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="./">3D</a>
+                <a class="nav-link" href="./">Projects</a>
             </li>
-            <li class="nav-item">
+<!--             <li class="nav-item">
                 <a class="nav-link" href="../ui-ux/">UI-UX</a>
             </li>
             <li class="nav-item">
@@ -40,7 +40,7 @@
             <li class="nav-item">
                 <a class="nav-link" href="../product/">Product</a>
             </li>
-        </ul>
+        </ul> -->
     </div>
 </nav>
 
