--- a/3D/index.html
+++ b/3D/index.html
@@ -29,9 +29,9 @@
     <div class="navbar-collapse collapse" id="collapsingNavbarXs">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="#3D">3D</a>
+                <a class="nav-link" href="#3D">Projects</a>
             </li>
-            <li class="nav-item">
+<!--             <li class="nav-item">
                 <a class="nav-link" href="../ui-ux/">UI-UX</a>
             </li>
             <li class="nav-item">
@@ -39,7 +39,7 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="../product/">Product</a>
-            </li>
+            </li> -->
         </ul>
     </div>
 </nav>
@@ -52,7 +52,7 @@
       <!-- TITLE -->
     <div class="row standard-margin project-showcase">
         <div class="col-md-6 col-sm-6 name-section">
-         3D
+         PROJECTS
         </div>
         <div class="col-md-6 col-sm-6">
         </div>
@@ -71,8 +71,20 @@
         </div>
       </div>
 
+      <div class="row standard-margin project-row">
+        <div class="col-md-6 col-sm-12 pb-3">
+            <a href="../arch/floodplain.html">
+                <div class="a-r-2"></div>
+            </a>
+        </div>
+        <div class="col-md-6 col-sm-12">
+            <a href="../arch/nfl.html">
+                <div class="a-r-1"></div>
+            </a>
+        </div>
+      </div>
 
-        <div class="row standard-margin project-row">
+    <div class="row standard-margin project-row">
         <div class="col-md-6 col-sm-12 pb-3">
             <a href="./cg.html">
                 <div class="g-r-3"></div>
@@ -84,6 +96,8 @@
             </a>
         </div>
       </div>
+
+
 
 
 
