--- a/arch/floodplain.html
+++ b/arch/floodplain.html
@@ -29,9 +29,9 @@
     <div class="navbar-collapse collapse" id="collapsingNavbarXs">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="../3D/">3D</a>
+                <a class="nav-link" href="../3D/">Projects</a>
             </li>
-            <li class="nav-item">
+<!--             <li class="nav-item">
                 <a class="nav-link" href="../ui-ux/">UI-UX</a>
             </li>
             <li class="nav-item">
@@ -39,7 +39,7 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="../product/">Product</a>
-            </li>
+            </li> -->
         </ul>
     </div>
 </nav>
