--- a/arch/nfl.html
+++ b/arch/nfl.html
@@ -30,9 +30,9 @@
     <div class="navbar-collapse collapse" id="collapsingNavbarXs">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="../3D/">3D</a>
+                <a class="nav-link" href="../3D/">Projects</a>
             </li>
-            <li class="nav-item">
+<!--             <li class="nav-item">
                 <a class="nav-link" href="../ui-ux/">UI-UX</a>
             </li>
             <li class="nav-item">
@@ -40,7 +40,7 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="../product/">Product</a>
-            </li>
+            </li> -->
         </ul>
     </div>
 </nav>
