--- a/3D/index.html
+++ b/3D/index.html
@@ -50,13 +50,13 @@
     <div class="container">
 
       <!-- TITLE -->
-    <div class="row standard-margin project-showcase">
+<!--     <div class="row standard-margin project-showcase">
         <div class="col-md-6 col-sm-6 name-section">
          PROJECTS
         </div>
         <div class="col-md-6 col-sm-6">
         </div>
-      </div>
+      </div> -->
 
       <div class="row standard-margin project-row">
         <div class="col-md-6 col-sm-12 pb-3">
