--- a/3D/quilt.html
+++ b/3D/quilt.html
@@ -81,10 +81,10 @@
 
           <div class="row standard-margin project-showcase">
               <div class="col-md-6 col-sm-12 pb-3">
-                  <img src="./media/quilt-3.jpg" class="image-showcase mx-auto" alt="Travel example.">
+                  <img src="./media/quilt-3.JPG" class="image-showcase mx-auto" alt="Travel example.">
               </div>
               <div class="col-md-6 col-sm-12">
-                  <img src="./media/quilt-4.jpg" class="image-showcase mx-auto" alt="Art Therapy Game map.">
+                  <img src="./media/quilt-4.JPG" class="image-showcase mx-auto" alt="Art Therapy Game map.">
               </div>
           </div>
 
@@ -93,7 +93,7 @@
                   <img src="./media/quilt-5.png" class="image-showcase mx-auto" alt="Art Therapy Game environment painting.">
               </div>
               <div class="col-md-6 col-sm-12">
-                  <img src="./media/quilt-6.jpg" class="image-showcase mx-auto" alt="Art Therapy Game environment manipulation.">
+                  <img src="./media/quilt-6.JPG" class="image-showcase mx-auto" alt="Art Therapy Game environment manipulation.">
               </div>
           </div>
 
