--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
 
 
     </style>
-    <title>Noah.S</title>
+    <title>Noah Sablan - designer</title>
   </head>
   <body>
     <div class="container page-box">
