--- a/arch/floodplain.html
+++ b/arch/floodplain.html
@@ -94,5 +94,6 @@
 
 <!-- Custom JS -->
     <script src="../static/home.js"></script>
+    <script src="../static/navbar.js"></script>
   </body>
 </html>
