--- a/3D/contact-me.html
+++ b/3D/contact-me.html
@@ -16,7 +16,7 @@
         <h1>Contact Me</h1>
         <p>Feel free to reach out with any questions or opportunities.</p>
         
-        <form id="contact-form" action="4788ea8c971a66707937cb889152246f" method="POST">
+        <form id="contact-form" action="https://formsubmit.co/4788ea8c971a66707937cb889152246f" method="POST">
             <div class="form-group">
                 <label for="name">Name</label>
                 <input type="text" id="name" name="name" required>
